--- a/example/res/values/strings.xml
+++ b/example/res/values/strings.xml
@@ -4,5 +4,21 @@
     <string name="app_name">JotformAPISample</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+	<string-array name="industry_arrays">
+	    <item>Education</item>
+	    <item>Web Design</item>
+	    <item>Religious</item>
+	    <item>Non-Profit</item>
+	    <item>Event Organizer</item>
+	    <item>Marketing</item>
+	    <item>Web Development</item>
+	    <item>Consultancy</item>
+	    <item>Photography</item>
+	    <item>Social Media</item>
+	    <item>Small Bussiness</item>
+	    <item>Sports</item>
+	    <item>Real Estate</item>
+	    <item>Human Resources</item>
+	    <item>Other</item>
+	</string-array>
 </resources>
